cabal-version:      3.0
name:               blogger
version:            0.1.0.0
-- synopsis:
-- description:
homepage:           https://github.com/vibe-876/blogger
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             cam
maintainer:         cameronayres123@gmail.com
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable blogger
    import:           warnings
    main-is:          Main.hs
    other-modules:    HtmlParser
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1, parsec, split
    hs-source-dirs:   app
    default-language: Haskell2010
